// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;

exports[`renders with form options wrap false 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;

exports[`renders with form options wrap true 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;

exports[`renders with relevant formStyles 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column; border: 1px solid red;"
    />
  </page>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <page>
    <view
      style="display: flex; flex: 1; flex-direction: column;"
    />
  </page>
</div>
`;
